# cpp-opengl-test

./: .gitmodules  CMakeLists.txt  README.md  build.sh  build_mingw32.bat  build_win32.bat  build_win64.bat
src/: Bitmap.cpp  Exception.h  Game.cpp  Game.h  Image.c  Logger.cpp  Logger.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
src/components/: RenderComponent.cpp  RenderComponent.h
src/core/: Core.h  Exception.h
src/graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexAttributes.h
src/shaders/: basic.frag.glsl  basic.vert.glsl
src/systems/: RenderSystem.cpp  RenderSystem.h
src/unused/: Bitmap.cpp  Bitmap.h  Program.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/utils/: OpenGL.c
